osquery-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osquery-deployment
  labels:
    app: osquery
spec:
  replicas: 3
  selector:
    matchLabels:
      app: osquery
  template:
    metadata:
      labels:
        app: osquery
    spec:
      shareProcessNamespace: true
      containers:
      #- name: nginx
        #image: nginx
      - name: osquery-exporter
        image: kubeir/osquery-exporter
        ports:
          - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 3

      - name: sleeper
        image: docker.io/prateeknischal/sleeper
        securityContext:
          capabilities:
            add: ["NET_RAW"]
          privileged: true
          runAsUser: 0
        volumeMounts:
          - name: dockersock
            mountPath: /app/run
      volumes:
      - name: dockersock
        hostPath:
          path: /run
