osquery-service.yml
apiVersion: v1
kind: Service
metadata:
  name: osquery-exporter
spec:
  selector:
    app: osquery
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
